# git-commit-generator

./: Cargo.toml  LICENSE  README.md  README_CN.md  flake.nix
.github/workflows/: build.yml  release.yml  update.yml
nix/modules/devShells/: default.nix
nix/modules/package/: default.nix  git-msg.nix
nix/modules/wrapper/: default.nix
nix/pkgs/: git-commit-generator.nix  git-msg.nix
src/: api.rs  config.rs  git.rs  main.rs
