[package]
name = "git-commit-generator"
version = "0.1.0"
edition = "2021"
authors = ["Emin <me@emin.chat>"]
description = """
An AI powered git commit message generator.
"""

[dependencies]
log = "0.4"
colored = "3.0"
pretty_env_logger = "0.5"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"
